--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0"
   },
-  "scripts": {
+ "scripts": {
   "start": "react-scripts --openssl-legacy-provider start",
-  "build": "react-scripts --openssl-legacy-provider build",
+  "build": "react-scripts build",
   "test": "react-scripts test",
   "eject": "react-scripts eject"
 },
